--- a/notebooks/plots_for_paper.ipynb
+++ b/notebooks/plots_for_paper.ipynb
@@ -18,17 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "cd24ba31-b89f-42d9-b5f1-d7a886ee093d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pySubnetSB.constants as cn\n",
     "from pySubnetSB.network import Network\n",
-    "from pySubnetSB.constraint_benchmark import ConstraintBenchmark\n",
+    "from pySubnetSB.benchmark import Benchmark\n",
     "from pySubnetSB.identity_hash_benchmark import IdentityHashBenchmark\n",
     "\n",
-    "\n",
+    "import itertools\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "5b5c2d81-1b81-401b-b3cb-a8c3714cb858",
    "metadata": {},
    "outputs": [],
@@ -491,7 +491,7 @@
     "    reference_size = 20\n",
     "    target_size = 100\n",
     "    fill_size = target_size - reference_size\n",
-    "    benchmark = ConstraintBenchmark(reference_size, fill_size=fill_size, num_iteration=1000)\n",
+    "    benchmark = Benchmark(reference_size, fill_size=fill_size, num_iteration=1000)\n",
     "    _ = benchmark.plotCompareConstraints(is_subnet=True, is_plot=False, font_size=18)\n",
     "    path = os.path.join(cn.PLOT_DIR, \"evaluate_constraints.pdf\")\n",
     "    plt.savefig(path)\n",
@@ -525,13 +525,13 @@
     "    num_iteration = 1000\n",
     "    font_size = 20\n",
     "    num_digit = 0\n",
-    "    _ = ConstraintBenchmark.plotHeatmap(range(4, 24, 4), range(10, 110, 10), percentile=50, font_size=font_size,\n",
+    "    _ = Benchmark.plotHeatmap(range(4, 24, 4), range(10, 110, 10), percentile=50, font_size=font_size,\n",
     "         ax=ax1, is_no_constraint=True, num_iteration=1, is_cbar=False, title=\"No constraint\", is_plot=False,\n",
     "        num_digit=num_digit)\n",
-    "    _ = ConstraintBenchmark.plotHeatmap(range(4, 24, 4), range(10, 110, 10), percentile=50, is_contains_reference=True,\n",
+    "    _ = Benchmark.plotHeatmap(range(4, 24, 4), range(10, 110, 10), percentile=50, is_contains_reference=True,\n",
     "        font_size=font_size, num_digit=num_digit,\n",
     "        ax=ax2, num_iteration=num_iteration, is_cbar=False, is_plot=False, title=\"constraint w/subnet\")\n",
-    "    _ = ConstraintBenchmark.plotHeatmap(range(4, 24, 4), range(10, 110, 10), percentile=50, is_contains_reference=False,\n",
+    "    _ = Benchmark.plotHeatmap(range(4, 24, 4), range(10, 110, 10), percentile=50, is_contains_reference=False,\n",
     "        font_size=font_size, num_digit=num_digit,\n",
     "        ax=ax3, num_iteration=num_iteration, is_cbar=False, is_plot=False, title=\"constraint w/o subnet\")\n",
     "    norm = mpl.colors.Normalize(vmin=0, vmax=15)\n",
@@ -596,18 +596,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "82f2f818-94b0-4669-8c63-208b87c82794",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "eplication:  80%|█████████████████████████▌      | 4/5 [00:02<00:00,  1.71it/s]"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[31], line 14\u001b[0m\n\u001b[1;32m     12\u001b[0m         done \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m done:\n\u001b[0;32m---> 14\u001b[0m     df \u001b[38;5;241m=\u001b[39m \u001b[43mBenchmark\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcalculateOccurrence\u001b[49m\u001b[43m(\u001b[49m\u001b[43msizes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midentity\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mID_STRONG\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[43m       \u001b[49m\u001b[43mnum_iteration\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_replication\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     16\u001b[0m     df\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbenchmark.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m     17\u001b[0m Benchmark\u001b[38;5;241m.\u001b[39mplotSpeciesReactionHeatmap(df, cn\u001b[38;5;241m.\u001b[39mD_MEAN_PROBABILITY, is_plot\u001b[38;5;241m=\u001b[39mIS_PLOT,\n\u001b[1;32m     18\u001b[0m       font_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m14\u001b[39m)\n",
+      "File \u001b[0;32m~/home/Technical/repos/pySubnetSB/src/pySubnetSB/benchmark.py:479\u001b[0m, in \u001b[0;36mBenchmark.calculateOccurrence\u001b[0;34m(cls, species_reaction_sizes, identity, max_num_assignment, num_replication, num_iteration, is_report)\u001b[0m\n\u001b[1;32m    477\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m tqdm\u001b[38;5;241m.\u001b[39mtqdm(\u001b[38;5;28mrange\u001b[39m(num_replication), desc\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mreplication\u001b[39m\u001b[38;5;124m\"\u001b[39m, disable\u001b[38;5;241m=\u001b[39m\u001b[38;5;129;01mnot\u001b[39;00m is_report):\n\u001b[1;32m    478\u001b[0m     reference_network \u001b[38;5;241m=\u001b[39m Network\u001b[38;5;241m.\u001b[39mmakeRandomNetworkByReactionType(num_reaction, num_species)\n\u001b[0;32m--> 479\u001b[0m     calculator \u001b[38;5;241m=\u001b[39m \u001b[43mSignificanceCalculatorCore\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum_species\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_reaction\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_iteration\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    480\u001b[0m     result \u001b[38;5;241m=\u001b[39m calculator\u001b[38;5;241m.\u001b[39mcalculateEqual(reference_network, identity\u001b[38;5;241m=\u001b[39midentity,\n\u001b[1;32m    481\u001b[0m             max_num_assignment\u001b[38;5;241m=\u001b[39mmax_num_assignment, is_report\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m    482\u001b[0m     frac_induceds\u001b[38;5;241m.\u001b[39mappend(result\u001b[38;5;241m.\u001b[39mfrac_induced)\n",
+      "File \u001b[0;32m~/home/Technical/repos/pySubnetSB/src/pySubnetSB/significance_calculator_core.py:33\u001b[0m, in \u001b[0;36mSignificanceCalculatorCore.__init__\u001b[0;34m(self, num_target_species, num_target_reaction, num_target_network)\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_target_species \u001b[38;5;241m=\u001b[39m num_target_species\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_target_network \u001b[38;5;241m=\u001b[39m num_target_network\n\u001b[0;32m---> 33\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtarget_networks \u001b[38;5;241m=\u001b[39m [Network\u001b[38;5;241m.\u001b[39mmakeRandomNetworkByReactionType(num_target_reaction,\n\u001b[1;32m     34\u001b[0m         num_target_species, is_exact\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m) \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_target_network)]\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtarget_dct:Optional[\u001b[38;5;28mdict\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "File \u001b[0;32m~/home/Technical/repos/pySubnetSB/src/pySubnetSB/significance_calculator_core.py:33\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_target_species \u001b[38;5;241m=\u001b[39m num_target_species\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_target_network \u001b[38;5;241m=\u001b[39m num_target_network\n\u001b[0;32m---> 33\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtarget_networks \u001b[38;5;241m=\u001b[39m [\u001b[43mNetwork\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmakeRandomNetworkByReactionType\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum_target_reaction\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     34\u001b[0m \u001b[43m        \u001b[49m\u001b[43mnum_target_species\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mis_exact\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_target_network)]\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtarget_dct:Optional[\u001b[38;5;28mdict\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "File \u001b[0;32m~/home/Technical/repos/pySubnetSB/src/pySubnetSB/network_base.py:421\u001b[0m, in \u001b[0;36mNetworkBase.makeRandomNetworkByReactionType\u001b[0;34m(cls, num_reaction, num_species, is_exact, **kwargs)\u001b[0m\n\u001b[1;32m    419\u001b[0m     num_species \u001b[38;5;241m=\u001b[39m num_reaction\n\u001b[1;32m    420\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(max_attempts): \n\u001b[0;32m--> 421\u001b[0m     network \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mcls\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_makeRandomNetworkByReactionType\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum_reaction\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_species\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnum_species\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    422\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m network\u001b[38;5;241m.\u001b[39mnum_species \u001b[38;5;241m==\u001b[39m num_species:\n\u001b[1;32m    423\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m network\n",
+      "File \u001b[0;32m~/home/Technical/repos/pySubnetSB/src/pySubnetSB/network_base.py:512\u001b[0m, in \u001b[0;36mNetworkBase._makeRandomNetworkByReactionType\u001b[0;34m(cls, num_reaction, num_species, is_prune_species, p0r0_frc, p0r1_frc, p0r2_frc, p0r3_frc, p1r0_frc, p1r1_frc, p1r2_frc, p1r3_frc, p2r0_frc, p2r1_frc, p2r2_frc, p2r3_frc, p3r0_frc, p3r1_frc, p3r2_frc, p3r3_frc, is_unique)\u001b[0m\n\u001b[1;32m    510\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCould not find unique reactions.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    511\u001b[0m frac \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mrand()\n\u001b[0;32m--> 512\u001b[0m reaction_type \u001b[38;5;241m=\u001b[39m \u001b[43mgetType\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfrac\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    513\u001b[0m num_product \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(reaction_type[\u001b[38;5;241m1\u001b[39m])\n\u001b[1;32m    514\u001b[0m num_reactant \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(reaction_type[\u001b[38;5;241m3\u001b[39m])\n",
+      "File \u001b[0;32m~/home/Technical/repos/pySubnetSB/src/pySubnetSB/network_base.py:497\u001b[0m, in \u001b[0;36mNetworkBase._makeRandomNetworkByReactionType.<locals>.getType\u001b[0;34m(frac)\u001b[0m\n\u001b[1;32m    495\u001b[0m     reaction_type \u001b[38;5;241m=\u001b[39m REACTION_TYPES[pos]\n\u001b[1;32m    496\u001b[0m     \u001b[38;5;66;03m# Handle cases of 0 fractions\u001b[39;00m\n\u001b[0;32m--> 497\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43misclose\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalue_dct\u001b[49m\u001b[43m[\u001b[49m\u001b[43mreaction_type\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mSUFFIX\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfrac\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m    498\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m    499\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m reaction_type\n",
+      "File \u001b[0;32m~/home/Technical/repos/pySubnetSB/sub/lib/python3.9/site-packages/numpy/core/numeric.py:2351\u001b[0m, in \u001b[0;36misclose\u001b[0;34m(a, b, rtol, atol, equal_nan)\u001b[0m\n\u001b[1;32m   2349\u001b[0m yfin \u001b[38;5;241m=\u001b[39m isfinite(y)\n\u001b[1;32m   2350\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mall\u001b[39m(xfin) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mall\u001b[39m(yfin):\n\u001b[0;32m-> 2351\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mwithin_tol\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43matol\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrtol\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2352\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   2353\u001b[0m     finite \u001b[38;5;241m=\u001b[39m xfin \u001b[38;5;241m&\u001b[39m yfin\n",
+      "File \u001b[0;32m~/home/Technical/repos/pySubnetSB/sub/lib/python3.9/site-packages/numpy/core/numeric.py:2332\u001b[0m, in \u001b[0;36misclose.<locals>.within_tol\u001b[0;34m(x, y, atol, rtol)\u001b[0m\n\u001b[1;32m   2330\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwithin_tol\u001b[39m(x, y, atol, rtol):\n\u001b[1;32m   2331\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m errstate(invalid\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m'\u001b[39m), _no_nep50_warning():\n\u001b[0;32m-> 2332\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m less_equal(\u001b[38;5;28mabs\u001b[39m(x\u001b[38;5;241m-\u001b[39my), atol \u001b[38;5;241m+\u001b[39m rtol \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mabs\u001b[39m(y))\n",
+      "File \u001b[0;32m~/home/Technical/repos/pySubnetSB/sub/lib/python3.9/site-packages/numpy/core/_ufunc_config.py:436\u001b[0m, in \u001b[0;36merrstate.__exit__\u001b[0;34m(self, *exc_info)\u001b[0m\n\u001b[1;32m    435\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__exit__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39mexc_info):\n\u001b[0;32m--> 436\u001b[0m     \u001b[43mseterr\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43moldstate\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    437\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcall \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m _Unspecified:\n\u001b[1;32m    438\u001b[0m         seterrcall(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moldcall)\n",
+      "File \u001b[0;32m~/home/Technical/repos/pySubnetSB/sub/lib/python3.9/site-packages/numpy/core/_ufunc_config.py:33\u001b[0m, in \u001b[0;36mseterr\u001b[0;34m(all, divide, over, under, invalid)\u001b[0m\n\u001b[1;32m     23\u001b[0m _errdict \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m\"\u001b[39m: ERR_IGNORE,\n\u001b[1;32m     24\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwarn\u001b[39m\u001b[38;5;124m\"\u001b[39m: ERR_WARN,\n\u001b[1;32m     25\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraise\u001b[39m\u001b[38;5;124m\"\u001b[39m: ERR_RAISE,\n\u001b[1;32m     26\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcall\u001b[39m\u001b[38;5;124m\"\u001b[39m: ERR_CALL,\n\u001b[1;32m     27\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprint\u001b[39m\u001b[38;5;124m\"\u001b[39m: ERR_PRINT,\n\u001b[1;32m     28\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlog\u001b[39m\u001b[38;5;124m\"\u001b[39m: ERR_LOG}\n\u001b[1;32m     30\u001b[0m _errdict_rev \u001b[38;5;241m=\u001b[39m {value: key \u001b[38;5;28;01mfor\u001b[39;00m key, value \u001b[38;5;129;01min\u001b[39;00m _errdict\u001b[38;5;241m.\u001b[39mitems()}\n\u001b[0;32m---> 33\u001b[0m \u001b[38;5;129m@set_module\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnumpy\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     34\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mseterr\u001b[39m(\u001b[38;5;28mall\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, divide\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, over\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, under\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, invalid\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m     35\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;124;03m    Set how floating-point errors are handled.\u001b[39;00m\n\u001b[1;32m     37\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    107\u001b[0m \n\u001b[1;32m    108\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m    110\u001b[0m     pyvals \u001b[38;5;241m=\u001b[39m umath\u001b[38;5;241m.\u001b[39mgeterrobj()\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
-    "if PLOT_ALL:\n",
-    "    plotModelPOC(is_strong=True)\n",
-    "    path = os.path.join(cn.PLOT_DIR, \"strong_identity_significance_reference_networks.pdf\")\n",
-    "    plt.savefig(path)\n",
+    "#if PLOT_ALL:\n",
+    "if True:\n",
+    "    #plotModelPOC(is_strong=True)\n",
     "    # Little difference between strong and weak identity\n",
     "    #plt.figure()\n",
-    "    #plotModelPOC(is_strong=False)"
+    "    #plotModelPOC(is_strong=False)\n",
+    "    sizes = list(itertools.product(range(3, 10), range(3, 10)))\n",
+    "    done = False\n",
+    "    if os.path.isfile(\"benchmark.csv\"):\n",
+    "        df = pd.read_csv(\"benchmark.csv\")\n",
+    "        if len(df) == len(sizes):\n",
+    "            done = True\n",
+    "    if not done:\n",
+    "        df = Benchmark.calculateOccurrence(sizes, identity=cn.ID_STRONG,\n",
+    "           num_iteration=100000, num_replication=10)\n",
+    "        df.to_csv(\"benchmark.csv\", index=False)\n",
+    "    Benchmark.plotSpeciesReactionHeatmap(df, cn.D_MEAN_PROBABILITY, is_plot=IS_PLOT,\n",
+    "          font_size=14)"
    ]
   },
   {
