Updated POC random plot

--- a/notebooks/plots_for_paper.ipynb
+++ b/notebooks/plots_for_paper.ipynb
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "74b2182a-11fb-469b-b9ef-0d062b691739",
    "metadata": {},
    "outputs": [],
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "7b26323f-ad51-48f3-ba6d-5d2c777429cd",
    "metadata": {},
    "outputs": [],
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "38768421-3210-4c8c-b6f6-5ef3004ecf7b",
    "metadata": {},
    "outputs": [
@@ -1535,6 +1535,9 @@
     "        #plt.title(f\"{adjective} Identity\")\n",
     "        plt.xlabel(\"number of species\", size=font_size)\n",
     "        plt.ylabel(\"number of reactions\", size=font_size)\n",
+    "        path = os.path.join(cn.PLOT_DIR, \"poc_benchmark.pdf\")\n",
+    "        plt.savefig(path)\n",
+    "        plt.show()\n",
     "# Test\n",
     "plotModelPOC(is_strong=True, is_plot=False)\n",
     "print(\"OK!\")"
@@ -1542,15 +1545,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "82f2f818-94b0-4669-8c63-208b87c82794",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "pairs:   0%|                                             | 0/49 [00:00<?, ?it/s]"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (346225109.py, line 17)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[28], line 17\u001b[0;36m\u001b[0m\n\u001b[0;31m    Benchmark.plotSpeciesReactionHeatmap(df, cn.D_MEAN_PROBABILITY, font_size=14i, is_plot=False)\u001b[0m\n\u001b[0m                                                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -1561,7 +1565,7 @@
     "    # Little difference between strong and weak identity\n",
     "    #plt.figure()\n",
     "    #plotModelPOC(is_strong=False)\n",
-    "    sizes = list(itertools.product(range(3, 10), range(3, 10)))\n",
+    "    sizes = list(itertools.product(range(2, 11), range(2, 11)))\n",
     "    done = False\n",
     "    if os.path.isfile(\"benchmark.csv\"):\n",
     "        df = pd.read_csv(\"benchmark.csv\")\n",
@@ -1571,9 +1575,198 @@
     "        df = Benchmark.calculateOccurrence(sizes, identity=cn.ID_STRONG,\n",
     "           num_iteration=10000, num_replication=10)\n",
     "        df.to_csv(\"benchmark.csv\", index=False)\n",
-    "    Benchmark.plotSpeciesReactionHeatmap(df, cn.D_MEAN_PROBABILITY, is_plot=IS_PLOT,\n",
-    "          font_size=14)"
+    "    Benchmark.plotSpeciesReactionHeatmap(df, cn.D_MEAN_PROBABILITY, font_size=14, is_plot=False)\n",
+    "    path = os.path.join(cn.PLOT_DIR, \"poc_random_benchmark.pdf\")\n",
+    "    plt.savefig(path)\n",
+    "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "3bed2452-4e56-436b-b5b1-f7a38da771f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_species</th>\n",
+       "      <th>num_reaction</th>\n",
+       "      <th>mean_probability</th>\n",
+       "      <th>std_probability</th>\n",
+       "      <th>mean_truncated</th>\n",
+       "      <th>poc_significance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.031944</td>\n",
+       "      <td>0.025048</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.007812</td>\n",
+       "      <td>0.004642</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.002639</td>\n",
+       "      <td>0.002092</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.000711</td>\n",
+       "      <td>0.000621</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.000150</td>\n",
+       "      <td>0.000157</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>81 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    num_species  num_reaction  mean_probability  std_probability  \\\n",
+       "0             2             2          0.031944         0.025048   \n",
+       "1             2             3          0.007812         0.004642   \n",
+       "2             2             4          0.002639         0.002092   \n",
+       "3             2             5          0.000711         0.000621   \n",
+       "4             2             6          0.000150         0.000157   \n",
+       "..          ...           ...               ...              ...   \n",
+       "76           10             6          0.000000         0.000000   \n",
+       "77           10             7          0.000000         0.000000   \n",
+       "78           10             8          0.000000         0.000000   \n",
+       "79           10             9          0.000000         0.000000   \n",
+       "80           10            10          0.000000         0.000000   \n",
+       "\n",
+       "    mean_truncated  poc_significance  \n",
+       "0              0.0               1.0  \n",
+       "1              0.0               2.0  \n",
+       "2              0.0               3.0  \n",
+       "3              0.0               3.0  \n",
+       "4              0.0               4.0  \n",
+       "..             ...               ...  \n",
+       "76             0.0               5.0  \n",
+       "77             0.0               5.0  \n",
+       "78             0.0               5.0  \n",
+       "79             0.0               5.0  \n",
+       "80             0.0               5.0  \n",
+       "\n",
+       "[81 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31ed5b3b-537e-48c0-9250-7608d6910411",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
