Test action for making script

--- a/examples/api_basics.ipynb
+++ b/examples/api_basics.ipynb
@@ -963,23 +963,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "14f9e282-065f-445b-9941-e4768bb6da38",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "api_basics.ipynb         reference_serialized.txt target_serialized.txt\n",
-      "api_basics.py            serialization.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Clean up the cloned repository\n",
-    "!rm -rf pySubnetSB\n",
-    "!ls"
+    "!rm -rf pySubnetSB"
    ]
   }
  ],
